--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="RESTART"
-        android:textColor="#000000"
+        android:text="REMATCH!"
+        android:textColor="@color/DarkWhite"
         android:textSize="32sp"
         app:layout_constraintTop_toBottomOf="@id/gameOverResult" />
 
